2007-06-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c: Fix problems encountered when reading and writing
	from/to pipes or compressed files.

2007-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Improved the pixel data marshalling
	in order to obtain better read performance for 10-bit DPX.
	* magick/blob.c (OpenBlob): Added support for MAGICK_MMAP_READ and
	MAGICK_MMAP_WRITE environment variable options to enable input and
	output file access using mmap().

2007-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Use MAGICK_IOBUF_SIZE to tune the size
	of the I/O buffer.  Sometimes performance is improved by using
	something other than the current default of 16KB.

2007-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Handle case where compression
	keyword is present but has value of 'None'.

2007-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Disable reading input files using
	memory mapping since it has been learned that some operating
	systems fail to do read-ahead on network files.  Without
	read-ahead, performance is poor.
	* magick/resource.c (AcquireMagickResource): Map resource limit
	was not being properly checked due to a typo.  The memory limit
	was being tested instead.
	* coders/tiff.c (ReadTIFFImage): Use libtiff to decode OJPEG
	compressed files into RGB.  Probably requires new OJPEG
	implementation from Joris Van Damme which is new in libtiff and
	not yet released. I am not completely sure that this approach is
	correct yet.

2007-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXGetWindowImage): Set image->depth
	appropriately.
	* many files: Compiler warnings reduction.

2007-05-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cineon.c (ReadCINEONImage): Alter sample scaling
	algorithm a bit.	