@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020070618"
+#define public MagickPackageVersionAddendum ".020070629"
 #define public MagickPackageReleaseDate "unreleased"
