@@ -1574,7 +1574,7 @@ MagickExport unsigned int CompositeImageCommand(ImageInfo *image_info,
             if (*option == '-')
               {
                 i++;
-                if ((i == argc) || !IsGeometry(argv[i]))
+                if (i == argc)
                   ThrowCompositeException(OptionError,MissingArgument,
                     option);
               }
@@ -2838,7 +2838,7 @@ MagickExport unsigned int ConvertImageCommand(ImageInfo *image_info,
             if (*option == '-')
               {
                 i++;
-                if ((i == argc) || !IsGeometry(argv[i]))
+                if (i == argc)
                   ThrowConvertException(OptionError,MissingArgument,option);
               }
             break;
@@ -9971,7 +9971,7 @@ MagickExport unsigned int MogrifyImageCommand(ImageInfo *image_info,
             if (*option == '-')
               {
                 i++;
-                if ((i == argc) || !IsGeometry(argv[i]))
+                if (i == argc)
                   ThrowMogrifyException(OptionError,MissingArgument,option);
               }
             break;
