@@ -21,6 +21,17 @@
 </tr>
 </table>
 <p>
+2007-06-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c: Fixed -affine command argument
+        validation. Fixes SourceForge issue 1743141 "Affine matrix option
+        parsing".<BR>
+  <LI> config/magic.mgk: Added detection for BigTIFF.
+  <LI> coders/tiff.c: Preliminary work to support BigTIFF.
+
+</UL>
+<p>
 2007-06-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
